
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

NotScripts 0.9.2 August 24th, 2010
	Major release.
	New: Temporarily allow this features along with a redesigned drop down menu.
	
	New: FTP sites embedded in iframes can now be blocked. FTP site HTML is generated by Google Chrome.
	New: Rewrote the url parser to be much more robust. Now also supports IPv6 in addition to IPv4 and text urls.
		 However, I have turned IPv6 recognition off in the code until it is more widespread and more people are familiar with it.
	New: NotScripts can recognize localhost type urls like http://localhost/something.html.		 
		 Note that the "localhost" part is required to be at least 4 characters long.
	New: More compatible and sensible default blocking policy for iframes. 
		IFrames are now loaded only if the current website is whitelisted instead of requiring you to whitelist every site in an iframe.
		This allows you to use sites like StumbleUpon that uses iframes to load external websites 
			without having to whitelist the external sites or totally disable iframe blocking like in NotScripts V0.9.1.
		Please remove      const DO_NOT_BLOCK_IFRAMES = true;      in CHANGE__PASSWORD__HERE.js if you added that in NotScripts V0.9.1.
		Note that the scripts and plugins inside of an iframe are blocked normally.
	New: Placed a description into the NotScripts password file to help new users. Also removed the commented out options.
	New: There is some preliminary mitigation for inline scripts.
	New: The error message for the password status will now tell you if your password is too short.