@@ -354,6 +354,12 @@ Please note that NotScripts is not a guarantee of security and users should alwa
 		</div>
 		
 		<div id="tabs-5">
+			<h3>NotScripts 0.9.5 August 24th, 2010</h3>
+			<ul>
+			  <li>Bug Fix: (Reported by Eric) Corrected path for icons some Linux systems were having trouble with.</li>
+			  <li>Bug Fix: (Reported by Tim) Corrected parsing of the @ symbol in a url that could have lead to the wrong domain being recognized.</li>
+			</ul>
+			
 			<h3>NotScripts 0.9.2 August 24th, 2010</h3>
 			<ul>
 			  <li>Major release.</li>
